syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "io/mystore/shipping/api/order_sku_item_api.proto";

package io.mystore.shipping.api;

service ShippingService {
  option (kalix.codegen) = {
    event_sourced_entity : {
      name : "io.mystore.shipping.entity.Shipping"
      entity_type : "shipping"
      state : "io.mystore.shipping.entity.OrderState"
      events : [
        "io.mystore.shipping.entity.OrderCreated",
        "io.mystore.shipping.entity.OrderShipped",
        "io.mystore.shipping.entity.OrderReleased",
        "io.mystore.shipping.entity.OrderItemShipped",
        "io.mystore.shipping.entity.OrderItemReleased",
        "io.mystore.shipping.entity.OrderSkuItemShipped",
        "io.mystore.shipping.entity.OrderSkuItemReleased" //
      ]
    }
  };

  rpc CreateOrder(CreateOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/orders/{order_id}/create-order"
      body : "*"
    };
  }

  rpc ShippedOrderSkuItem(ShippedOrderSkuItemCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/orders/{order_id}/shipped-order-sku-item"
      body : "*"
    };
  }

  rpc ReleaseOrderSkuItem(ReleaseOrderSkuItemCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/orders/{order_id}/release-order-sku-item"
      body : "*"
    };
  }

  rpc GetOrder(GetOrderRequest) returns (Order) {
    option (google.api.http) = {
      get : "/orders/{order_id}"
    };
  }
}

message CreateOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  repeated OrderItem order_items = 4;
}

message ShippedOrderSkuItemCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string order_sku_item_id = 2;
  string sku_id = 3;
  string stock_sku_item_id = 4;
  google.protobuf.Timestamp shipped_utc = 5;
}

message ReleaseOrderSkuItemCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string order_sku_item_id = 2;
  string sku_id = 3;
  string stock_sku_item_id = 4;
}

message GetOrderRequest {
  string order_id = 1 [ (kalix.field).entity_key = true ];
}

message Order {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  repeated OrderItem order_items = 6;
}

message OrderItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  repeated OrderSkuItem order_sku_items = 5;
}

message OrderSkuItem {
  string customer_id = 1;
  string order_id = 2;
  string order_sku_item_id = 3;
  string sku_id = 4;
  string sku_name = 5;
  string stock_sku_item_id = 6;
  google.protobuf.Timestamp ordered_utc = 7;
  google.protobuf.Timestamp shipped_utc = 8;
  google.protobuf.Timestamp back_ordered_utc = 9;
}
